manifest/network-policy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-nginx1-to-app1
spec:
  podSelector:
    matchLabels:
      app: app1
  ingress:
  - from:
    - podSelector:
        matchLabels:
          app: nginx1
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: deny-app1-to-nginx1
spec:
  podSelector:
    matchLabels:
      app: nginx1
  ingress: []
