manifest/policy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: restrict-traffic
spec:
  podSelector:
    matchLabels:
      app: app1
  ingress:
  - from:
    - podSelector:
        matchLabels:
          app: nginx1
